commit al master de blogpost en su versiòn mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titulo de post</title>
+    <title>post title</title>
     <link rel="stylesheet" href="css/estilos.css" />
 </head>
 <body>
+    <div id="container">
+        <h1>here we go</h1>
+        <p>this is the first word</p>
+        
+    </div>
     <div>
         Primer parrafo 2 4 6 8 7
     </div>
