finalizada la cabecera con diseño beige

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            Hyperblog
         </div>
         <h1>here we go</h1>
         <p>this is the first word</p>
