agregado contenido adicional de blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,9 @@
     <div id="container">
         <h1>here we go</h1>
         <p>this is the first word</p>
+        <p>
+            desde lo profundo del corazon
+        </p>
         
     </div>
     <div>
