modifique cabecera y agrege suscribete dale like

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Hyperblog
+            Hyperblog maestro
         </div>
         <h1>here we go</h1>
         <p>this is the first word</p>
@@ -20,6 +20,9 @@
     </div>
     <div>
         Primer parrafo 2 4 6 8 7
+    </div>
+    <div>
+        suscribete y dale like
     </div>
 </body>
 </html>
