se agrego titulo de rama master

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,11 +9,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-<<<<<<< HEAD
-            Hyperblog maestro
-=======
-            Hyperblog de cabecera
->>>>>>> cabecera
+            Hyperblog maestro titulo para rama maestra
         </div>
         <h1>here we go</h1>
         <p>this is the first word</p>
