se agrego titulo de rama cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Hyperblog de cabecera
+            Hyperblog de cabecera titulo de la rama cabecera
         </div>
         <h1>here we go</h1>
         <p>this is the first word</p>
